feat(chaining): add export/import chaining